name:                mapquest-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/mapquest-api
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2018 Marco Zocca
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Web.API.Mapquest
                       Web.API.Mapquest.Geocoding
  build-depends:       base >= 4.7 && < 5
                     , req
                     , aeson

-- executable mapquest-api
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , mapquest-api

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mapquest-api
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/mapquest-api
